testCases/semanticAnalyzerTestCases/error/inconsistentFunctionCalls.cs16
/*
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

void bar(void){
    ;
}

int foo(void){
    return -1;
}

int main(void){
    bool x;

    foo(5);
    x := foo();
    x := bar();
    bar(2);

    return 123456789;
}

